[metadata]
name = nekonohako
version = 0.0.1.1
author = Andrey Makarov
author_email = kiryuu.moeka@outlook.jp
description = A Python wrapper for catbox.moe API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saint-images/nekonohako
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
